# kwinna

./: .claudecodeignore  .env.example  .gitignore  README.md  context.md  copy.py  package.json  pnpm-lock.yaml
.github/workflows/: build-desktop.yml
Integrations/autoTags/: index.html  package.json  pnpm-lock.yaml
Integrations/autoTags/prisma/: clear.ts  dev.db  schema.prisma  seed.ts
Integrations/autoTags/server/: index.ts
Integrations/autoTags/src/: App.tsx
apps/api/: drizzle.config.ts  nixpacks.toml  package.json  tsconfig.json
apps/api/drizzle/: 0000_amused_paper_doll.sql  0000_careless_wendell_rand.sql  0001_analytics_events.sql  0001_cuddly_gamma_corps.sql  0002_returns.sql  0003_stock_movements_size.sql  0004_product_season.sql  0005_sale_pos_fields.sql  0006_metric_snapshots.sql  0007_email_verification.sql  0008_password_reset_tokens.sql  0009_spicy_zeigeist.sql  0010_email_verification_short_code.sql  0011_shipping_method.sql  (+19 more)
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
design/: design-system.md  layouts.md  tokens.json
design/logos/: generate-icons.sh  icon-preview.html  tauri-icon.icns
issues/: generar_fichas.py
prompts/: 01_scaffold.md  02_contracts.md  03_mocks.md  04_features.md  05_backend.md  06_refactor.md  07_routing.md
(+314 files in other folders)
