[package]
name = "kwinna-pos"
version = "0.0.1"
description = "Kwinna Point-of-Sale Desktop App"
authors = ["Kwinna"]
edition = "2021"

[lib]
name = "kwinna_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tauri-plugin-barcode-scanner only compiles on Android/iOS targets.
# Keeping it under [target] prevents Cargo from trying to link it on desktop.
[target.'cfg(mobile)'.dependencies]
tauri-plugin-barcode-scanner = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
